# kinfu_remake

./: CMakeLists.txt  PhoXiAPIReference.cpp
apps/: CMakeLists.txt  demo.cpp  demo2.cpp  rply.c  rply.h
kfusion/include/kfusion/: kinfu.hpp
kfusion/src/: core.cpp  kinfu.cpp  projective_icp.cpp
